# Basis

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xslczx/basis/sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xslczx/basis/sample/: App.java  AppExecutors.kt  Datas.kt  MainActivity.kt  MainFragment.kt  PermissionUtils.java  ToolbarColorizeHelper.kt
app/src/main/java/com/xslczx/basis/sample/adapter/: BaseQuickAdapter.java  BaseSelectionAdapter.java  BaseViewHolder.java  (+7 more)
app/src/main/res/drawable/: anylayer_notification_bg.xml  splash_screen.xml
app/src/main/res/layout/: activity_main.xml  anylayer_float_layer.xml  anylayer_notification_content.xml  anylayer_notification_layer.xml  fragment_main.xml  fragment_music.xml  fragment_record.xml  item_music.xml  toolbar.xml
app/src/main/res/menu/: menu_music.xml
app/src/main/res/values/: colors.xml  ids.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/xslczx/basis/sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lamemp3/: CMakeLists.txt  build.gradle
lamemp3/src/main/: AndroidManifest.xml
lamemp3/src/main/cpp/: SimpleLame.cpp  SimpleLame.h
lamemp3/src/main/cpp/lamemp3/: machine.h
lamemp3/src/main/java/github/hotstu/lame4droid/: LameMp3Manager.java  Mp3EncodeThread.java  Mp3Recorder.java  PCMFormat.java  RecorderListener.java  SimpleLame.java
lamemp3/src/main/res/values/: strings.xml
lamemp3/src/test/java/github/hotstu/lame4droid/: ExampleUnitTest.java
(+21 files in other folders)
